--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: PF Blog
 SEOTitle: 鹏飞的技术博客 | PF Blog
 header-img: img/post-bg-desk.jpg
 email: pfzhang@cse.cuhk.edu.hk
-description: "做一个独立思考的明白人."
+description: ""
 keyword: "Data Mining, Machine Learning, HPC"
 url: "http://kuafu0331.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -11,7 +11,7 @@ github_repo: "https://github.com/kuafu0331/kuafu0331.github.io.git" # you code r
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "做一个独立思考的明白人!"
+sidebar-about-description: ""
 sidebar-avatar: /img/pfzhang.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -19,10 +19,10 @@ sidebar-avatar: /img/pfzhang.jpg      # use absolute URL, seeing it's used in bo
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
+zhihu_username:     zhang-peng-fei-93-8
+github_username:    kuafu1994
+#facebook_username:  baiying.qiu.7
+#jianshu_username:   e71990ada2fd
 #twitter_username:   qiubaiying
 
 
